hw9 finished